# Yubikey-Notification-Monitor

./: .gitignore  README.md  example.bash  install.sh  monitor.py  pyproject.toml  requirements.txt  tracker.py  uninstall.sh  yubi_detect.py  yubikey.py  yubimon.service
tests/: test_monitor.py  test_yubikey_detect.py
